Manage email invitations

--- a/sgeg-admin/lang/es.json
+++ b/sgeg-admin/lang/es.json
@@ -1,6 +1,7 @@
 {
     "Invitations": "Invitaciones",
     "Invitation": "Invitación",
+    "Recipients": "Destinatarios",
     "Back":"Volver",
     "Student": "Estudiante",
     "Students": "Estudiantes",
@@ -51,13 +52,16 @@
     "Status":"Estado",
     "Unassign": "Desasignar",
     "All":"Todo",
+    "Lists": "Listas",
     "Text":"Texto",
+    "Comma separated":"Separado por coma",
     "Rooms":"Salones",
     "Paper type":"Tipo de papel",
     "Orientation": "Orientación",
     "Default":"Por defecto",
     "Portrait":"Vertical",
     "Landscape":"Horizontal",
+    "Subject": "Asunto",
     "Site name": "Nombre del sitio",
     "Sender email": "Email Remitente",
     "Sender name": "Nombre Remitente",
