Improve events management

--- a/sgeg-admin/lang/es.json
+++ b/sgeg-admin/lang/es.json
@@ -14,6 +14,7 @@
     "Degrees": "Titulaciones",
     "Phone": "Teléfono",
     "List": "Listado",
+    "Send Email": "Enviar Email",
     "Delete selected": "Eliminar seleccionado",
     "Keywords": "Palabras clave",
     "Is Sponsor": "Es padrino",
