Review and clean code

--- a/sgeg-admin/lang/es.json
+++ b/sgeg-admin/lang/es.json
@@ -15,6 +15,9 @@
     "Phone": "Teléfono",
     "List": "Listado",
     "Staircase" : "Escaleta",
+    "Event" : "Evento",
+    "Seat": "Asiento",
+    "Seats": "Asientos",
     "Send Email": "Enviar Email",
     "Delete selected": "Eliminar seleccionado",
     "Keywords": "Palabras clave",
