--- a/sgeg-admin/lang/es.json
+++ b/sgeg-admin/lang/es.json
@@ -16,8 +16,11 @@
     "List": "Listado",
     "Staircase" : "Escaleta",
     "Event" : "Evento",
+    "Events" : "Eventos",
     "Seat": "Asiento",
     "Seats": "Asientos",
+    "staircase": "Escaleta",
+    "Row": "Fila",
     "Send Email": "Enviar Email",
     "Delete selected": "Eliminar seleccionado",
     "Keywords": "Palabras clave",
@@ -32,6 +35,7 @@
     "Requested by": "Solicitado por",
     "Garment":"Traje",
     "Garments":"Trajes",
+    "Images":"Imágenes",
     "Properties": "Características",
     "Borrow Garment": "Pedir traje académico",
     "Borrow": "Pedir prestado",
